examples/type_system/failing/177_module_missing_open_brace.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/177_module_missing_open_brace.flx
// error[E034]: Missing Module Body
//
// This module body needs to start with `{`.
//
//   examples/type_system/failing/177_module_missing_open_brace.flx:24:1
//    |
// 24 | let x = 1
//    | ^^^
//
// Hint:
//   Module declarations use `module Name { ... }`.
//
// Note:
//   while parsing module `Demo`
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E034

module Demo
let x = 1
let after = 1
